syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  int32 id = 1;
  string name = 100;
  string messageId = 110;
  ComplexRequestMsg msg = 111; 
}

message ComplexRequestMsg {
  string displayname = 1;
  int32 grades = 2;
} 

// The response message containing the greetings.
message HelloReply {
  int32 replayId = 1;
  string name = 100;
  string messageId = 111;
  ComplexReplyMsg helloReplyMsg = 2; 
}

message ComplexReplyMsg {
  int32 complexReplyMsgId = 1; 
  string displayNameReply = 2;
  int32 gradesReply = 3;
  string origin = 22;
  string correlationId = 300;
  int32 sentAt = 400;
  string type = 500;
  int32 version = 550;
}